# tabmonet

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  auto_gluon_model.py  bench_tabmonetv1.sh  embedding.py  job.sub  model.py  optimizer.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: base_tabmonet.yaml
confs/: config.yaml
confs/dataset/: airfoil.yaml  maternal.yaml
confs/model/: realtabmonet.yaml  tabmonetv1.yaml  tabmonetv2.yaml
confs/numerical_encoder/: linear.yaml  pbld.yaml  periodic.yaml  quantile.yaml
confs/numerical_preprocessor/: quantile.yaml  robust.yaml
experiments/: convolution_ensemble.ipynb
logs/architecture_ablation/2026-04-11-18-05/: events.out.tfevents.1775948702.Radis-MacBook-Pro.local.91002.0  preprocessor.pkl  tabmonet.pt
logs/architecture_ablation/2026-04-11-18-08/: events.out.tfevents.1775948903.Radis-MacBook-Pro.local.91933.0  preprocessor.pkl  tabmonet.pt
logs/architecture_ablation/2026-04-11-18-13/: events.out.tfevents.1775949184.Radis-MacBook-Pro.local.93349.0  preprocessor.pkl  tabmonet.pt
logs/architecture_ablation/2026-04-11-18-27/: events.out.tfevents.1775950066.Radis-MacBook-Pro.local.96571.0  preprocessor.pkl  tabmonet.pt
logs/architecture_ablation/2026-04-11-18-40/: preprocessor.pkl  (+1 more)
scripts/: run_tabarena_lite.py  test.py  test_autogluon.py  train.py
src/: arch_compare.ipynb  configs.py  train.py
src/models/: embeddings.py  layers.py  tabmonet.py
src/models/layers/: mlp.py  (+1 more)
src/tabmonet/: optimizers.py  trainer.py
src/utils/: data.py  optimizer.py  trainer.py
(+187 files in other folders)
