[project]
name = "tabmonet"
version = "0.1.0"
description = "Tabular Multilinear Operator Networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.5.0",
    "desilofhe>=1.11.2",
    "hydra-core>=1.3.2",
    "numpy>=2.1.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "ucimlrepo>=0.0.7",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
extend-exclude = ["tests", "src/tabmonet/models/tabmonet.py"]
